# modern_05

./: .disk.raw.source  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  boot_loader.c  boot_page_table.c  build_disk_image.sh  debug.cpp  debug.h  efiConsoleControl.h  efiUgaDraw.h  elf.h  gdb-remote.sh  irq.S  irq.cpp  kernel.cpp  kernel.ld  kthread.cpp  main.c  mm.cpp  process.cpp  qemu-gdb.sh  qemu.sh  startup.nsh  syscall.cpp  vbox.sh
.github/workflows/: qemu.yml
common/: CMakeLists.txt  endian.cpp  unwind.cpp
cxx/: CMakeLists.txt  exceptions.cpp  placeholder.cpp
device/: CMakeLists.txt  ahci.cpp  apic.cpp  efi.cpp  gpt.cpp  pci.cpp  pci_devices.cpp  rtl8139.cpp  serial8250.cpp
fs/: CMakeLists.txt  tree.cpp
include/: cpu_defs.h  cpu_utils.h  irq.h  irq.hpp  kernel.h  kthread.h  process.h  syscall.h
include/common/: defs.h  endian.hpp  error.hpp  hexdump.hpp  kallocator.hpp  klist.hpp  kmap.hpp  kmemory.hpp  kspinlock.hpp  kssq.hpp  kstring.hpp  kvector.hpp  memory.hpp  small_vec.hpp  unwind.hpp  vdtor.hpp
include/device/: ahci.hpp  gpt.hpp  pci.h  pci_devices.hpp  rtl8139.hpp  serial8250.hpp
include/fs/: fat32.hpp  mem_fs_node.hpp  tree.hpp
include/init/: efi_info.h
include/lib/: defs.h  file_size.h  port_io.h  serial_port.h  string.h  utils.h
include/mm/: fixed_block_allocator.h  mm.h  page_alloc.h
include/net/: arp.hpp  ethernet.hpp  ipv4.hpp
init/: init.S  init.cpp
kernel-abi/include/kernel-abi/: syscall_nr.h
lib/: CMakeLists.txt  cpu_utils.cpp  port_io.cpp  serial_port.cpp  string.cpp
mm/: CMakeLists.txt  mm.cpp  page_alloc.cpp
net/: CMakeLists.txt  arp.cpp  ipv4.cpp
user/: CMakeLists.txt  user.ld
user/programs/: init.cpp
